--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,4 @@ languageCode = "jp"
 title = "My New Hugo Site"
 baseurl = "https://mitakeck.github.io/blog"
 pygmentscodefences = true
+PygmentsStyle = "manni"
