--- a/config.toml
+++ b/config.toml
@@ -3,3 +3,4 @@ title = "My New Hugo Site"
 baseurl = "https://mitakeck.github.io/blog"
 pygmentscodefences = true
 PygmentsStyle = "manni"
+theme = "simple-a"
